Fixed docs + added polynomial regressor + fixed bugs

--- a/examples/Example_Fourie.ipynb
+++ b/examples/Example_Fourie.ipynb
@@ -108,43 +108,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5722f53d",
-   "metadata": {},
-   "source": [
-    "### Инициализация гиперпараметров модели"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "847610a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "init_params = {\n",
-    "    \"order\": 5, # обязательный параметр\n",
-    "    #\"absolute_sigma\": True, # опционально\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "20caa037",
    "metadata": {},
    "source": [
     "### Инициализируется валидатор\n",
     "\n",
-    "Для работы нужно выполнить 4 этапа:\n",
+    "Для работы нужно выполнить 3 этапа:\n",
     "1) Инициализировать исходный временный ряд;\n",
     "2) Сгенерировать признаки, передав путь к JSON файлу;\n",
-    "3) Установить модель, задав название модели и её гиперпараметры;\n",
-    "4) Установить метод кросс-валидации и количество фолдов с размером тестовой выборки (заранее необходимо выполнить этапы 1 и 2);\n",
-    "5) Провести кросс-валидацию модели, задав метрику, название целевого признака и временного признака из исходных данных"
+    "3) Установить параметры инициализации и кросс-валидации, передав путь к JSON файлу;\n",
+    "4) Провести кросс-валидацию модели, задав метрику, название целевого признака и временного признака из исходных данных"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "eac9fef4",
    "metadata": {},
    "outputs": [],
@@ -152,15 +130,14 @@
     "val = Validator()\n",
     "\n",
     "val.set_data(train)\n",
-    "val.set_generator(r\"data\\config.json\")\n",
-    "val.set_model(\"Fourie\", init_params)\n",
-    "val.set_split_method(\"rolling\", 10)\n",
-    "val.validate(\"WAPE\", 'value', 'date')"
+    "val.set_generator(r\"data\\configs\\features\\config.json\")\n",
+    "val.load_params(r\"data\\configs\\params\\validation_params_fourie.json\")\n",
+    "val.validate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "45dea371",
    "metadata": {},
    "outputs": [
@@ -196,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "bc2df9df",
    "metadata": {},
    "outputs": [
@@ -226,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "03c26a8f",
    "metadata": {},
    "outputs": [
@@ -256,7 +233,7 @@
     }
    ],
    "source": [
-    "gen = FeaturesGenerator(r\"data\\config.json\")\n",
+    "gen = FeaturesGenerator(r\"data\\configs\\features\\config.json\")\n",
     "test = gen.generate_features(test)\n",
     "\n",
     "print(test.info())"
@@ -264,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "62a4dfbb",
    "metadata": {},
    "outputs": [
@@ -303,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ebb4e7ad",
    "metadata": {},
    "outputs": [
@@ -334,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "b3e4dbef",
    "metadata": {},
    "outputs": [
@@ -366,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f5168fa4",
    "metadata": {},
    "outputs": [
@@ -445,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d0540bf9",
    "metadata": {},
    "outputs": [
