--- a/examples/Example_RandomForest.ipynb
+++ b/examples/Example_RandomForest.ipynb
@@ -108,14 +108,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5722f53d",
-   "metadata": {},
-   "source": [
-    "### Инициализация гиперпараметров модели"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "20caa037",
    "metadata": {},
    "source": [
@@ -130,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "eac9fef4",
    "metadata": {},
    "outputs": [
@@ -155,8 +147,8 @@
     "val = Validator()\n",
     "\n",
     "val.set_data(train)\n",
-    "val.set_generator(r\"data\\config.json\")\n",
-    "val.load_params(r\"data\\validation_params_randomforest.json\")\n",
+    "val.set_generator(r\"data\\configs\\features\\config.json\")\n",
+    "val.load_params(r\"data\\configs\\params\\validation_params_randomforest.json\")\n",
     "val.validate()"
    ]
   },
@@ -228,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "03c26a8f",
    "metadata": {},
    "outputs": [
@@ -258,7 +250,7 @@
     }
    ],
    "source": [
-    "gen = FeaturesGenerator(r\"data\\config.json\")\n",
+    "gen = FeaturesGenerator(r\"data\\configs\\features\\config.json\")\n",
     "test = gen.generate_features(test)\n",
     "\n",
     "print(test.info())"
