Fixed docs + added tests + refactored dir

--- a/examples/Example_PolinomialRegression.ipynb
+++ b/examples/Example_PolinomialRegression.ipynb
@@ -103,7 +103,7 @@
    "id": "ffaf66f4",
    "metadata": {},
    "source": [
-    "## Пример с использованием ElasticNet из библиотеки sklearn"
+    "## Пример с использованием Polinomial Regression из библиотеки sklearn"
    ]
   },
   {
