Added more docs + fixed bugs + added description in SARIMA example

--- a/examples/Example_SARIMA.ipynb
+++ b/examples/Example_SARIMA.ipynb
@@ -95,7 +95,10 @@
    "outputs": [],
    "source": [
     "train = df.iloc[:-48]\n",
-    "test = df.iloc[-90:] # почему-то требуется не 48 элементов, а 78 =>  тестовый набор состоит из 90, т.к. 12 будут отброшены при генерации признаков"
+    "# т.к. модель не видела последнюю тестовую выборку в кросс-валидации, чтобы предсказать заданную \n",
+    "# нужно взять данные за len(val.split_handler.test_size) + 48 => требуется не 48 элементов, а 78\n",
+    "# поэтому тестовый набор состоит из 90, т.к. 12 будут отброшены при генерации признаков, и ещё 30 не будут участвовать в предсказании\n",
+    "test = df.iloc[-90:]"
    ]
   },
   {
@@ -382,6 +385,8 @@
     }
    ],
    "source": [
+    "# exog содержит 78 элементов, т.к. модель не видела 48 тестовых + 30 валидационных при кросс-валидации\n",
+    "# индексы, в пределах которых получаются предсказания, являются началом и концом тестовой выборки\n",
     "predict_params = {\n",
     "    'start': test.index[-48],\n",
     "    'end': test.index[-1],\n",
